# CUDA-RayTracing

./: .gitignore  CMakeLists.txt
Test/: main.cu
include/: cpu_raytracer.cuh  material.cuh  plane.cuh  quad.cuh  ray.cuh  scene.cuh  scene_setup.cuh  sphere.cuh  vec3.cuh
include/core/: material.cuh  vec3.cuh
include/debug/: debug_config.cuh  debug_utils.cuh
include/geometry/: plane.cuh  quad.cuh  scene.cuh  sphere.cuh
include/rendering/: light.cuh  raytrace.cuh  scene_setup.cuh
output/: output.ppm
src/: cpu_raytracer.cu  main.cu  raytracer.cu
